--- a/LaskarSampahIRT/Pages/Bank/BankSampahStoryboard.storyboard
+++ b/LaskarSampahIRT/Pages/Bank/BankSampahStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ExD-9b-rvq">
     <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Bank Sampah View Controller-->
+        <!--Bank Sampah-->
         <scene sceneID="keP-vY-UlT">
             <objects>
                 <viewController id="xAY-bO-zPN" customClass="BankSampahViewController" customModule="LaskarSampahIRT" customModuleProvider="target" sceneMemberID="viewController">
@@ -65,6 +65,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="xOX-bt-722"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Bank Sampah" id="b51-h8-Dea"/>
                     <connections>
                         <outlet property="searchDisplayController" destination="AAi-rd-FEv" id="Yp0-8H-Wzn"/>
                         <outlet property="tableViewBank" destination="vLB-Jo-TJU" id="cYo-f4-5PJ"/>
@@ -79,6 +80,26 @@
                         <outlet property="searchResultsDelegate" destination="xAY-bO-zPN" id="XMJ-Qy-HPh"/>
                     </connections>
                 </searchDisplayController>
+            </objects>
+            <point key="canvasLocation" x="1100" y="22.906403940886701"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="VmT-wo-Kts">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ExD-9b-rvq" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" systemItem="bookmarks" id="fE9-6R-IHA"/>
+                    <toolbarItems/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="feB-Ib-rqd">
+                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="xAY-bO-zPN" kind="relationship" relationship="rootViewController" id="HkJ-ka-0eV"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fLI-en-ow6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="157.59999999999999" y="22.906403940886701"/>
         </scene>
