--- a/LaskarSampahIRT/View/Base.lproj/Main.storyboard
+++ b/LaskarSampahIRT/View/Base.lproj/Main.storyboard
@@ -19,6 +19,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="afS-H3-rB0" kind="relationship" relationship="viewControllers" id="6BE-1N-3mX"/>
+                        <segue destination="Sfn-dT-EQR" kind="relationship" relationship="viewControllers" id="XZw-12-O0C"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Cnx-AP-fmf" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -34,6 +35,16 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ylP-Mv-BL3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="528" y="-391"/>
+        </scene>
+        <!--BankSampahStoryboard-->
+        <scene sceneID="Rhu-UX-stC">
+            <objects>
+                <viewControllerPlaceholder storyboardName="BankSampahStoryboard" id="Sfn-dT-EQR" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="CQL-Bz-3Oq"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1n1-YO-XWZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="551" y="-330"/>
         </scene>
     </scenes>
 </document>
